--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@t3-oss/env-core": "^0.12.0",
     "@tailwindcss/vite": "^4.0.6",
+    "@tanstack/devtools-vite": "^0.3.3",
     "@tanstack/react-devtools": "^0.2.2",
     "@tanstack/react-form": "^1.23.4",
     "@tanstack/react-query": "^5.66.5",
